--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <section class="container">
         <div class="row align-items-center">
             <div class="col-md-6 text-center order-md-last">
-                <img class="img-fluid animated wow fadeInRight" src="/assets/img/hs1.png" alt="" width="450px">
+                <img class="img-fluid animated wow fadeInRight" src="assets/img/hs1.png" alt="" width="450px">
             </div>
             <div class="col-md-6 ">
                 <h4 class="title-text animated wow fadeInLeft">Homeshop Home Delivery Service Franchise </h4>
@@ -76,7 +76,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <img class="img-fluid animated wow fadeInLeft" src="/assets/img/hs5.png" alt="">
+                    <img class="img-fluid animated wow fadeInLeft" src="assets/img/hs5.png" alt="">
                 </div>
                 <div class="col-md-6">
                     <h3 class="title-text mb-3 animated wow fadeInRight">Why should you opt for this?</h3>
@@ -117,25 +117,25 @@
         <h3 class="title-text text-center mb-4 animated wow fadeInDown">How will HOMESHOP help you?</h3>
         <div class="row text-center animated wow fadeInRight">
             <div class="col-md-3">
-                <img class="img-fluid mb-2" src="/assets/img/growth.png" alt="" width="150px">
+                <img class="img-fluid mb-2" src="assets/img/growth.png" alt="" width="150px">
                 <h6 class="">
                     Customised Growth Plan
                 </h6>
             </div>
             <div class="col-md-3">
-                <img class="img-fluid mb-2" src="/assets/img/marketing.png" alt="" width="150px">
+                <img class="img-fluid mb-2" src="assets/img/marketing.png" alt="" width="150px">
                 <h6 class="">
                     Aggressive Marketing
                 </h6>
             </div>
             <div class="col-md-3">
-                <img class="img-fluid mb-2" src="/assets/img/consume.png" alt="" width="150px">
+                <img class="img-fluid mb-2" src="assets/img/consume.png" alt="" width="150px">
                 <h6 class="">
                     Consumer Insights
                 </h6>
             </div>
             <div class="col-md-3">
-                <img class="img-fluid mb-2" src="/assets/img/menu.png" alt="" width="150px">
+                <img class="img-fluid mb-2" src="assets/img/menu.png" alt="" width="150px">
                 <h6 class="">
                     Offer Genrating
                 </h6>
@@ -149,7 +149,7 @@
             <div class="row text-center wow fadeInUp" data-wow-delay="0.1s">
                 <div class="col-md-4 d-flex justify-content-center">
                     <div class="card shadow p-4" style="width: 18rem;">
-                        <img class="mx-auto d-block" src="/assets/img/investment.png" alt="" width="150px">
+                        <img class="mx-auto d-block" src="assets/img/investment.png" alt="" width="150px">
                         <div class="card-body">
                             <h5 class="card-title">Investment</h5>
                             <p class="card-text">Starting at 4-5 Lacs only</p>
@@ -158,7 +158,7 @@
                 </div>
                 <div class="col-md-4 d-flex justify-content-center">
                     <div class="card shadow p-4" style="width: 18rem;">
-                        <img class="mx-auto d-block" src="/assets/img/area.png" alt="" width="150px">
+                        <img class="mx-auto d-block" src="assets/img/area.png" alt="" width="150px">
                         <div class="card-body">
                             <h5 class="card-title">Area</h5>
                             <p class="card-text">300 - 400 sq ft</p>
@@ -167,7 +167,7 @@
                 </div>
                 <div class="col-md-4 d-flex justify-content-center">
                     <div class="card shadow p-4" style="width: 18rem;">
-                        <img class="mx-auto d-block" src="/assets/img/location.png" alt="" width="150px">
+                        <img class="mx-auto d-block" src="assets/img/location.png" alt="" width="150px">
                         <div class="card-body">
                             <h5 class="card-title">Location</h5>
                             <p class="card-text">Anywhere across your city</p>
