--- a/contactus.html
+++ b/contactus.html
@@ -55,7 +55,7 @@
                 <img src="assets/img/undraw-contact.svg" class="img-fluid" alt="">
             </div>
             <div class="col-md-6 wow fadeInRight">
-                <form enctype="multipart/form-data" action="/contactus/send" method="post">
+                <form enctype="multipart/form-data" action="#" method="post">
                     <div class="row">
                         <div class="col">
                             <input type="text" class="form-control" name="fname" placeholder="First name" required>
