--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
             <div class="col-xl-6 col-lg-7 offset-xl-1 position-relative ">
                 <div class="py-5" style="min-height: 543px;">
                     <div class="d-none d-lg-block position-absolute bg-no-repeat bg-position-center h-100 wow fadeInUp"
-                        style="top: 0;left: -45px;width: 646px;background-image: url(/assets/img/bg-shape.svg);"></div>
+                        style="top: 0;left: -45px;width: 646px;background-image: url(assets/img/bg-shape.svg);"></div>
                     <div class="row g-0 mx-n2 pt-lg-4 text-center wow fadeInRight">
                         <div class="col-sm-4 px-2 mb-3">
                             <div class="card h-100 card-body py-5 justify-content-center border-0 shadow-lg text-center"
