footer link updated

--- a/contactus.html
+++ b/contactus.html
@@ -134,18 +134,17 @@
                     <h6 class="text-uppercase font-weight-bold">Useful links</h6>
                     <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                     <p>
-                        <a class="btn btn-outline-light w-100" href="">Home</a>
+                        <a class="btn btn-outline-light w-100" href="index.html">Home</a>
                     </p>
                     <p>
-                        <a class="btn btn-outline-light w-100" href="">About</a>
+                        <a class="btn btn-outline-light w-100" href="about.html">About</a>
                     </p>
                     <p>
-                        <a class="btn btn-outline-light w-100" href="">Service</a>
+                        <a class="btn btn-outline-light w-100" href="service.html">Service</a>
                     </p>
                     <p>
-                        <a class="btn btn-outline-light w-100" href="">Contact Us</a>
+                        <a class="btn btn-outline-light w-100" href="contactus.html">Contact Us</a>
                     </p>
-
                 </div>
                 <div class="col-md-4 text-justify">
                     <h6 class="text-uppercase font-weight-bold">Contact</h6>
