--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
                         <div class="col-sm-4 px-2 mb-3">
                             <div class="card h-100 card-body py-5 justify-content-center border-0 shadow-lg text-center"
                                 href="#">
-                                <i class="fas fa-shopping-cart text-primary h1 mb-3 w-100" ></i>
+                                <i class="fas fa-shopping-cart text-primary h1 mb-3 w-100"></i>
                                 <h3 class="h5 mb-0">Grocery</h3>
                             </div>
                         </div>
@@ -140,18 +140,17 @@
                     <h6 class="text-uppercase font-weight-bold">Useful links</h6>
                     <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                     <p>
-                        <a class="btn btn-outline-light w-100" href="">Home</a>
+                        <a class="btn btn-outline-light w-100" href="index.html">Home</a>
                     </p>
                     <p>
-                        <a class="btn btn-outline-light w-100" href="">About</a>
+                        <a class="btn btn-outline-light w-100" href="about.html">About</a>
                     </p>
                     <p>
-                        <a class="btn btn-outline-light w-100" href="">Service</a>
+                        <a class="btn btn-outline-light w-100" href="service.html">Service</a>
                     </p>
                     <p>
-                        <a class="btn btn-outline-light w-100" href="">Contact Us</a>
+                        <a class="btn btn-outline-light w-100" href="contactus.html">Contact Us</a>
                     </p>
-
                 </div>
                 <div class="col-md-4 text-justify">
                     <h6 class="text-uppercase font-weight-bold">Contact</h6>
